# are-on-google-cloud

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
agent/: function_caller.py  generator.py  indexer.py  retriever.py  tools.py
config/: config.py
docs/: bigquery.md  else.md
schemas/: common.py  function_calling.py  rag.py  response.py  tools.py
sql/: create_table.sql
telemetry/: logging.py  manager.py  monitoring.py
